--- a/main/static/css/index.css
+++ b/main/static/css/index.css
@@ -13,7 +13,6 @@ html {
 
 .dicts li p a {
   font-size: 31px;
-  padding: 5px;
   display: -webkit-box;
   -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
@@ -47,7 +46,6 @@ html {
   top: 120px;
   display: block;
   float: left;
-  margin-right: 10px;
   background: rgb(255, 243, 241);
 }
 
@@ -81,10 +79,11 @@ ul {
 
 }
 
+
 .panel {
-  background-image: url(../assets/panel.jpg);
+  background-image: url(../assets/panel1.png);
   width: 100%;
-  height: 101px;
+  height: 72px;
   position: fixed;
   bottom: 0;
   left: 0;
@@ -113,7 +112,7 @@ ul {
   top: 120px;
   left: 0;
   bottom: 0;
-  right: 83%;
+  right: 82%;
 }
 
 .middle {
@@ -128,13 +127,12 @@ ul {
 
 .devochki {
   background-color: #d39696;
-  width: 18%;
+  width: 18%
 }
 
 .sonya {
   float: left;
   width: 100%;
-
 }
 
 .dasha {
@@ -222,6 +220,7 @@ button:active {
 .button-dict {
   font-size: 20px;
 }
+
 
 .add-words-input__button {
   width: 100px;
