--- a/main/templates/profile.html
+++ b/main/templates/profile.html
@@ -1,11 +1,8 @@
-{% extends "index.html" %}
-{% load static %}
+{% extends "index.html" %} {% load static %} {% block title %}Мой
+профиль{%endblock %} {% block content %}
+<img src="../static/assets/{{ user.id }}.jpeg" width="172px" />
+<h1>{{ user.username }}</h1>
 
-{% block title %}Мой профиль{% endblock %}
-
-{% block content %}
-
-{{ user.username }}
 <form onsubmit="logout(event)">
     {% csrf_token %}
     <button class="main-button">Выйти</button>
